--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,213 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import RecoveryCreamBtn from "../components/products/RecoveryCreamBtn.astro";
+import Layout from "../layouts/Layout.astro";
+import RecoveryCream from "../assets/images/recovery-cream.png";
+import RecoveryCream2 from "../assets/images/recovery-cream2.jpg";
+import RecoveryCream3 from "../assets/images/recovery-cream-3.png";
+import Icon1 from "../assets/images/icon1.png";
+import Icon2 from "../assets/images/icon2.png";
+import NourishImg from "../assets/images/nourish-your-skin.jpg";
+import HarmonyImg from "../assets/images/with-timeless-harmony.jpg";
+import { Image } from "astro:assets";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title="ByMudras - Organic & natural products">
+  <!-- Main banner -->
+  <div class="banner">
+    <div
+      class="ml-[150px] sm:ml-[300px] md:ml-[350px] lg:ml-[450px] xl:ml-[600px] duration-[800ms] taos:translate-x-[-200px]"
+    >
+      <h1 class="text-4xl md:text-6xl xl:text-8xl">
+        Soothe <br /> your body <br /> and soul
+      </h1>
+      <RecoveryCreamBtn className="uppercase hidden md:block text-xl"
+        >Get recovery cream</RecoveryCreamBtn
+      >
+    </div>
+    <RecoveryCreamBtn className="mt-10 mx-4 uppercase md:hidden"
+      >Get recovery cream</RecoveryCreamBtn
+    >
+  </div>
+  <div class="relative flex justify-center w-full top-[-25px]">
+    <a class="bg-black border-4 border-white rounded-full">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        width="48"
+        height="48"
+        ><title>chevron-down</title><path
+          fill="white"
+          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
+        ></path></svg
+      >
+    </a>
+  </div>
+  <!-- Ends main banner -->
+
+  <section class="mt-10">
+    <div class="flex justify-center duration-[800ms] taos:translate-y-[200px]">
+      <h1 class="uppercase text-center text-5xl max-w-screen-md">
+        <strong>Recovery cream</strong><br />
+        Harnessing Nature's Strength + Enhanced with 8,000 MG CBD
+      </h1>
+    </div>
+    <div class="duration-[800ms] taos:translate-y-[200px]">
+      <RecoveryCreamBtn className="uppercase block mx-auto mt-10"
+        >Get recovery cream</RecoveryCreamBtn
+      >
+    </div>
+
+    <Image
+      src={RecoveryCream}
+      alt="Recovery Cream"
+      class="block mx-auto mt-10 duration-[800ms] taos:translate-y-[200px]"
+    />
+
+    <div class="grid md:grid-cols-2 gap-5 container mx-auto">
+      <div class="duration-[800ms] taos:translate-x-[-200px]">
+        <Image src={Icon1} alt="Icon 1" class="block mx-auto mt-10" />
+        <hr class="border-4 w-48 border-black mx-auto my-5" />
+        <p class="text-center">
+          Experience natural relief with Mudras' Recovery Cream. Enhanced with
+          8,000 MG CBD, is designed to calm, restore, and refresh your skin.
+        </p>
+      </div>
+      <div class="duration-[800ms] taos:translate-x-[200px]"> 
+        <Image src={Icon2} alt="Icon 1" class="block mx-auto mt-10" />
+        <hr class="border-4 w-48 border-black mx-auto my-5" />
+        <p class="text-center">
+          This potent blend provides deep nourishment and promotes overall
+          well-being, offering a soothing touch that helps you bounce back
+          stronger.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="mt-20 bg-[#f1f1f1]">
+    <div class="container mx-auto">
+      <div class="grid md:grid-cols-2">
+        <div>
+          <h1 class="uppercase text-center text-5xl font-bold pt-10">
+            Reawaken your body
+          </h1>
+          <p class="p-5">
+            Mudras' Recovery Cream revitalize your body by deeply nourishing the
+            skin, helping to alleviate tension and restore vitality.
+            <br /><br />
+            With its potent natural ingredients, this cream delivers a soothing effect
+            that leaves your body feeling ready to take on the day.
+            <br /><br />
+            Wheter you're recovering from a workout or simply seeking daily nourishment,
+            Mudras' Recovery Cream is your go-to solution.
+          </p>
+        </div>
+        <div>
+          <Image
+            src={RecoveryCream2}
+            alt="Recovery Cream"
+            class="block mx-auto duration-[800ms] taos:translate-y-[200px]"
+          />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="mt-20 container mx-auto">
+    <h1 class="uppercase text-center text-5xl font-bold">Formulated to</h1>
+    <div class="grid md:grid-cols-2 duration-[800ms] taos:translate-x-[-200px]">
+      <div>
+        <Image src={NourishImg} alt="" class="block mx-auto md:mr-0 mt-10" />
+      </div>
+      <div class="flex items-center w-full">
+        <div class="bg-[#f1f1f1] w-full p-14">
+          <h2 class="font-bold uppercase text-3xl">Nourish <br /> your skin</h2>
+          <hr class="border-4 w-32 border-black my-5" />
+          <p class="text-xl">
+            Feel refreshed, replenished, and revitalized with our mix blend of
+            natural ingredients.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="grid md:grid-cols-2 duration-[800ms] taos:translate-x-[200px]">
+      <div class="md:order-2">
+        <Image src={HarmonyImg} alt="" class="block mx-auto md:ml-0 mt-10" />
+      </div>
+      <div class="flex items-center w-full md:order-1">
+        <div class="bg-[#f1f1f1] w-full p-14">
+          <h2 class="font-bold uppercase text-3xl md:text-right">
+            With <br /> timeless <br /> harmony
+          </h2>
+          <hr class="border-4 w-32 border-black my-5 md:ml-auto" />
+          <p class="text-xl md:text-right">
+            Experience the peace and serenity that Mudras' ancestral wisdom has
+            crafted carefully for you.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="mt-20">
+    <div class="flex justify-center">
+      <h1 class="uppercase text-center md:text-5xl font-bold max-w-screen-md">
+        Immerse yourself in the power of natural relief
+      </h1>
+    </div>
+    <Image
+      src={RecoveryCream3}
+      alt="Recovery Cream"
+      class="block mx-auto mt-10"
+    />
+    <RecoveryCreamBtn className="uppercase block mx-auto mt-10"
+      >Get recovery cream</RecoveryCreamBtn
+    >
+  </section>
+  <section class="mt-20 bg-[#212121] text-white p-5 md:p-20">
+    <h1 class="uppercase text-center md:text-5xl font-bold">
+      METICULOUSLY <br />
+      CRAFTED SOLUTIONS <br />
+      FOR YOU
+    </h1>
+    <p class="mt-10 xl:text-center">
+      Mudras combines ancient wisdom with modern wellness. Our products draw
+      inspiration from time-honored recipes, enhanced by contemporary
+      innovations. Experience these meticulously crafted solutions and let them
+      enrich your well-being, infusing your daily routine with a touch of
+      timeless harmony.
+    </p>
+  </section>
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
+  .banner {
+    background-image: url("../assets/images/banner-img.png");
+    background-size: cover;
+    background-position: 40% top;
+    background-repeat: no-repeat;
+    height: 100vh;
+    max-height: 1000px;
+    color: #fff;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  @media (min-width: 1300px) {
+    .banner div {
+      margin-left: 600px;
+    }
+  }
+  @media (min-width: 1700px) {
+    .banner div {
+      margin-left: 800px;
+    }
+  }
+  @media (min-width: 2100px) {
+    .banner div {
+      margin-left: 1000px;
+    }
+  }
 </style>
